<?xml version="1.0"?>
<package>
  <name>rsv_balance_rqt</name>
  <version>0.0.1</version>
  <description>RQT interface for setting operation mode of the balance platform.</description>
  
  <maintainer email="vmatos@robosavvy.com">Vitor Matos</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/Robots/RoboSavvyBalance</url>
  <url type="repository">https://github.com/robosavvy/rsv_balance_desktop</url>
  <author email="vmatos@robosavvy.com">Vitor Matos</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rsv_balance_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  
  <run_depend>rsv_balance_msgs</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>rosservice</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
